# vfh_cluster_recognition

./: CMakeLists.txt  README.md  README.txt
include/vfh_cluster_classifier/: common.h  feature_cloud.h  nearest_search.h  persistence_utils.h  recognizer.h  test_runner.h  typedefs.h
src/: build_tree.cpp  nearest_neighbors.cpp  recognize_testing.cpp  recognizer.cpp  test_runner.cpp  view_preprocess.cpp
